<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.possible.demo.feature.search.SearchUserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/search_frament_root"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_input"
            android:layout_width="0dp"
            android:padding="@dimen/default_spacing"
            android:layout_height="wrap_content"
            android:hint="@string/search_user_hint"
            android:background="@android:color/white"
            android:elevation="@dimen/elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--suppress AndroidUnknownAttribute -->
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/search_input_edit_text"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{(s) -> viewModel.onSearchTextChanged(s.toString())}"
                android:imeOptions="actionSearch"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingStart="@dimen/default_spacing"
            android:paddingEnd="@dimen/default_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/item_user"
            app:layout_constraintTop_toBottomOf="@id/search_input"
            app:visibleOrGone="@{viewModel.showUsers}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_user_no_followers_found"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_input"
            app:visibleOrGone="@{viewModel.showEmptyState}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_user_waiting_for_user_input"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_input"
            app:visibleOrGone="@{viewModel.showWaitingForInput}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_user_no_such_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_input"
            app:visibleOrGone="@{viewModel.showNoSuchUser}" />

        <TextView
            android:id="@+id/error_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/something_went_wrong"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_input"
            app:layout_constraintVertical_chainStyle="packed"
            app:visibleOrGone="@{viewModel.showErrorState}" />

        <View
            android:layout_width="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/loading_overlay"
            app:visibleOrGone="@{viewModel.showLoading}"
            android:layout_height="0dp"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_input"
            app:visibleOrGone="@{viewModel.showLoading}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>